--- a/README
+++ b/README
@@ -2,8 +2,9 @@ XEO Build System Instructions
 
 0) If the concatenator.jar does not exist, run ant -f build_concatenator.xml
 
-1) Set the version and path to git repositories in global.properties (xeo.buildnumber,xeo.git and xwc.git properties respectively)
+1) Set the version and path to git repositories in ant/global.properties (xeo.buildnumber, xeo.git and xwc.git properties respectively, set the branches you want to build)
 2) Run ant -f build.xml to create necessary structures
 3) Run ant -f BuildProject.xml to generate the XAR file
+
 
 NOTES : Currently it does not create tags in the repository nor does it copy the generated to XAR to anywhere
