Updated to better explain the git repositories and the checkout process

--- a/README
+++ b/README
@@ -1,11 +1,12 @@
 XEO Build System Instructions
 
-0) If the concatenator.jar does not exist, run ant -f build_concatenator.xml
+0) Checkout this project, clone the XEO and XWC Projects to your local hard drive
+1) If the concatenator.jar does not exist, run ant -f build_concatenator.xml to create it
 
-1) Set the version and path to git repositories in ant/global.properties (xeo.buildnumber, xeo.git and xwc.git properties respectively, set the branches you want to build
- - You can build xeo with a specific branch and xwc with a different branch)
-2) Run ant -f build.xml to create necessary structures
-3) Run ant -f BuildProject.xml to generate the XAR file
+2) Set the version and path to git repositories in ant/global.properties 
+	(xeo.buildnumber, path to xeo git repository and xwc git repository properties respectively, set the branches you want to build - You can build xeo with a specific branch and xwc with a different branch)
+3) Run ant -f build.xml to create necessary structures
+4) Run ant -f BuildProject.xml to generate the XAR file
  
  
  
